Release history for Net-HTTP


Karen Etheridge (1):
      Added LICENSE



_______________________________________________________________________________
2015-05-20 Net-HTTP 6.09

Karen Etheridge (1):
      No changes since 6.08_002



_______________________________________________________________________________
2015-05-02 Net-HTTP 6.08_002

Karen Etheridge (1):
      fix foolish $VERSION error in 6.08_001



_______________________________________________________________________________
2015-05-01 Net-HTTP 6.08_001

Mark Overmeer (1):
      resolve issues with SSL by reading bytes still waiting to be read after
      the initial 1024 bytes [RT#104122]



_______________________________________________________________________________
2014-07-23 Net-HTTP 6.07

Jason Fesler (1):
      Opportunistically use IO::Socket::IP or IO::Socket::INET6.
      Properly parse IPv6 literal addreses with optional port numbers. [RT#75618]



_______________________________________________________________________________
2013-03-10 Net-HTTP 6.06

Jesse Luehrs (1):
      IO::Socket::SSL doesn't play well with select() [RT#81237]



_______________________________________________________________________________
2012-11-10 Net-HTTP 6.05

Gisle Aas (1):
      Convert to Test::More style and disable test on Windows [RT#81090]

Marinos Yannikos (1):
      SSL broken for some servers [RT#81073]



_______________________________________________________________________________
2012-11-08 Net-HTTP 6.04

Gisle Aas (3):
      Simpler handling of double chunked [RT#77240]
      Check for timeouts before reading [RT#72676]
      Fake can_read

Dagfinn Ilmari Mannsåker (1):
      Fix chunked decoding on temporary read error [RT#74431]

Eric Wong (1):
      NB: set http_bytes if read_entity_body hits EAGAIN on first read

Jay Hannah (1):
      chunked,chunked is invalid, but happens. :( Ignore all but the first. [RT#77240]


