@@ -1,6 +1,5 @@
-#!perl -w
-
 use strict;
+use warnings;
 use Test;
 
 plan tests => 37;
